代码优化整理

--- a/source_code/ch6-pyradiomicsIntro.ipynb
+++ b/source_code/ch6-pyradiomicsIntro.ipynb
@@ -10,7 +10,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-15T03:08:48.942915Z",
+     "start_time": "2023-05-15T03:08:47.895255Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import radiomics\n",
