--- a/02_main_code/00_测试.ipynb
+++ b/02_main_code/00_测试.ipynb
@@ -284,6 +284,71 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "import random"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-15T09:37:21.014978Z",
+     "start_time": "2023-05-15T09:37:21.007885Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "100"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=random.choices(range(200), k=100)\n",
+    "len(a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-15T09:50:38.603343Z",
+     "start_time": "2023-05-15T09:50:38.599921Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1.00000000e-04, 1.12332403e-04, 1.26185688e-04, 1.41747416e-04,\n       1.59228279e-04, 1.78864953e-04, 2.00923300e-04, 2.25701972e-04,\n       2.53536449e-04, 2.84803587e-04, 3.19926714e-04, 3.59381366e-04,\n       4.03701726e-04, 4.53487851e-04, 5.09413801e-04, 5.72236766e-04,\n       6.42807312e-04, 7.22080902e-04, 8.11130831e-04, 9.11162756e-04,\n       1.02353102e-03, 1.14975700e-03, 1.29154967e-03, 1.45082878e-03,\n       1.62975083e-03, 1.83073828e-03, 2.05651231e-03, 2.31012970e-03,\n       2.59502421e-03, 2.91505306e-03, 3.27454916e-03, 3.67837977e-03,\n       4.13201240e-03, 4.64158883e-03, 5.21400829e-03, 5.85702082e-03,\n       6.57933225e-03, 7.39072203e-03, 8.30217568e-03, 9.32603347e-03,\n       1.04761575e-02, 1.17681195e-02, 1.32194115e-02, 1.48496826e-02,\n       1.66810054e-02, 1.87381742e-02, 2.10490414e-02, 2.36448941e-02,\n       2.65608778e-02, 2.98364724e-02, 3.35160265e-02, 3.76493581e-02,\n       4.22924287e-02, 4.75081016e-02, 5.33669923e-02, 5.99484250e-02,\n       6.73415066e-02, 7.56463328e-02, 8.49753436e-02, 9.54548457e-02,\n       1.07226722e-01, 1.20450354e-01, 1.35304777e-01, 1.51991108e-01,\n       1.70735265e-01, 1.91791026e-01, 2.15443469e-01, 2.42012826e-01,\n       2.71858824e-01, 3.05385551e-01, 3.43046929e-01, 3.85352859e-01,\n       4.32876128e-01, 4.86260158e-01, 5.46227722e-01, 6.13590727e-01,\n       6.89261210e-01, 7.74263683e-01, 8.69749003e-01, 9.77009957e-01,\n       1.09749877e+00, 1.23284674e+00, 1.38488637e+00, 1.55567614e+00,\n       1.74752840e+00, 1.96304065e+00, 2.20513074e+00, 2.47707636e+00,\n       2.78255940e+00, 3.12571585e+00, 3.51119173e+00, 3.94420606e+00,\n       4.43062146e+00, 4.97702356e+00, 5.59081018e+00, 6.28029144e+00,\n       7.05480231e+00, 7.92482898e+00, 8.90215085e+00, 1.00000000e+01])"
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.logspace(-4, 1, 100)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-15T11:41:06.986145Z",
+     "start_time": "2023-05-15T11:41:00.419806Z"
+    }
+   }
   }
  ],
  "metadata": {
