--- a/02_main_code/00_测试.ipynb
+++ b/02_main_code/00_测试.ipynb
@@ -349,6 +349,149 @@
      "start_time": "2023-05-15T11:41:00.419806Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "import os\n",
+    "if not os.path.exists('../00_资源库/sundry'):\n",
+    "    os.makedirs('../00_资源库/sundry')\n",
+    "\n",
+    "with open('../00_资源库/sundry/custom.csv', 'w', 1, 'utf-8') as f:\n",
+    "    f.write('default,student,balance,income\\n')\n",
+    "    for i in range(1000):\n",
+    "        default = random.choice(['0','1'])\n",
+    "        student = random.choice(['0','1'])\n",
+    "        balance = round(random.uniform(200, 1000), 6)\n",
+    "        income = round(random.uniform(2000, 50000), 6)\n",
+    "        f.write(f'{default},{student},{balance},{income}\\n')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-16T02:59:10.838895Z",
+     "start_time": "2023-05-16T02:59:10.828451Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(700, 3) (300, 3) (700,) (300,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "data = pd.read_csv('../00_资源库/sundry/custom.csv', sep=\",\")\n",
+    "# 定义预测变量和响应变量\n",
+    "y = data.iloc[:, 0]\n",
+    "x = data.iloc[:, 1:]\n",
+    "\n",
+    "# split the dataset into training (70%) and testing (30%) sets\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.3,random_state=0)\n",
+    "print(x_train.shape, x_test.shape, y_train.shape, y_test.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-16T03:14:25.077216Z",
+     "start_time": "2023-05-16T03:14:25.053179Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-7.20776963e-10] [[-6.90257792e-07  9.35670141e-05  6.66661234e-07]] 0.5157142857142857\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# 实例化模型对象\n",
+    "log_regression = LogisticRegression()\n",
+    "# 使用训练数据拟合模型\n",
+    "log_regression.fit(x_train, y_train)\n",
+    "# 使用测试数据进行预测\n",
+    "y_pred = log_regression.predict(x_test)\n",
+    "# 输出模型参数\n",
+    "print(log_regression.intercept_, log_regression.coef_, log_regression.score(x_train, y_train))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-16T03:18:33.694917Z",
+     "start_time": "2023-05-16T03:18:33.674474Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0 146]\n",
+      " [  0 154]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "\n",
+    "cnf_matrix = metrics.confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "print(cnf_matrix)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-16T03:19:35.488555Z",
+     "start_time": "2023-05-16T03:19:35.482141Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5133333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-16T03:20:12.050423Z",
+     "start_time": "2023-05-16T03:20:12.047291Z"
+    }
+   }
   }
  ],
  "metadata": {
